test/typecheck/bad-call-result-mismatch.txt
;;; ERROR: 1
(module
  (import "foo" "bar" (func $import (result f32)))
  (func $direct (result i64) (i64.const 0))
  (type $indirect (func (result i64)))
  (table anyfunc (elem $direct))

  (func
    if
      call $direct
    else
      nop
    end
    if
      call $import
    else
      nop
    end
    if
      i32.const 0
      call_indirect (type $indirect)
    else
      nop
    end))
(;; STDERR ;;;
out/test/typecheck/bad-call-result-mismatch.txt:9:5: error: type mismatch in if, expected [i32] but got []
    if
    ^^
out/test/typecheck/bad-call-result-mismatch.txt:10:7: error: type mismatch in if true branch, expected [] but got [i64]
      call $direct
      ^^^^
out/test/typecheck/bad-call-result-mismatch.txt:14:5: error: type mismatch in if, expected [i32] but got []
    if
    ^^
out/test/typecheck/bad-call-result-mismatch.txt:15:7: error: type mismatch in if true branch, expected [] but got [f32]
      call $import
      ^^^^
out/test/typecheck/bad-call-result-mismatch.txt:19:5: error: type mismatch in if, expected [i32] but got []
    if
    ^^
out/test/typecheck/bad-call-result-mismatch.txt:21:7: error: type mismatch in if true branch, expected [] but got [i64]
      call_indirect (type $indirect)
      ^^^^^^^^^^^^^
;;; STDERR ;;)
